<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".BuyTickets">

    <TextView
        android:text="@string/buyTickets"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:paddingBottom="5dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <ProgressBar
        android:id="@+id/buyTicketsProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/yourName"
        android:hint="@string/name"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/yourPhoneNumber"
        android:hint="@string/phoneNumber"
        android:layout_gravity="center_horizontal"
        android:inputType="phone" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/numberOfTickets"
        />

    <TextView
        android:text="@string/yourPhoto"
        android:paddingTop="5dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <ImageButton
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:id="@+id/yourPhoto"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/yourPhoto"
        android:onClick="takePhotoClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buyTickets"
        android:id="@+id/buyTicketsButton"
        android:layout_gravity="center_horizontal"
        android:enabled="true"
        android:onClick="buyTicketsClick"/>

    <TextView
        android:id="@+id/tosLink"
        android:textSize="@dimen/abc_text_size_caption_material"
        android:textColor="@color/link_text_material_light"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/privacyNotice"
        android:onClick="tosLink"/>

</LinearLayout>
