<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Welcome">

    <ProgressBar
        android:id="@+id/welcomeProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:textSize="@dimen/abc_text_size_headline_material"
        android:paddingBottom="5dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currentRaffleTitle"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currentRaffleDate" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <TextView
            android:paddingEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawingTime"
            tools:ignore="RtlCompat,RtlSymmetry" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currentRaffleDrawingTime" />
    </LinearLayout>

    <TextView
        android:paddingTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currentRaffleDescription"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/prizes" />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/prizes"
        />

    <TextView
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/ticketPrices" />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/ticketPrices"
        />

    <TextView
        android:id="@+id/tosLink"
        android:textSize="@dimen/abc_text_size_caption_material"
        android:textColor="@color/link_text_material_light"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/privacyNotice"
        android:onClick="tosLink"/>
</LinearLayout>
